--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
     />
-    <link rel="stylesheet" href="./assets/index.css" />
+    <link rel="stylesheet" href="/index.css" />
   </head>
 
   <body>
@@ -16,10 +16,11 @@
 
     <main class="container">
       <video class="movie">
-        <source src="./assets/ejercicio.mp4" />
+        <source src="assets/spinetta_song.mp4" />
       </video>
 
       <button>Play/Pause</button>
     </main>
+  <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
